--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "illuminate/support": "^5.1",
         "illuminate/http": "^5.1"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "autoload": {
         "psr-4": {
             "Delatbabel\\JsonResponses\\": "src/"
